--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <body>
         <div class="main-container">
             <header class="header">
-                <img src="assets/images/logo/ohmyfood.png" alt="Logo HoMyFood">
+                <div>
+                    <i class=""></i>
+                    <img src="assets/images/logo/ohmyfood.png" alt="Logo HoMyFood">
+                </div>                
                 <div class="location">
                     <i class=""></i>
                     <h1>Paris, Belleville</h1>
@@ -24,28 +27,62 @@
             </header>
         </div>
         <main>
-            <div>
-                <h2>Réserver le menu qui vous convient</h2>
-                <h3>Découvrez des restaurants d'exception, sélectionnés par nos soins</h3>
-                <button type="submit" class="">Exporez nos restaurants</button>
-            </div>
+            <section class="hero">
+                <title>Réserver le menu qui vous convient</title>
+                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+                <button type="submit" class="btn">Exporez nos restaurants</button>
+            </section>
             <section class="fonctionnement">
-                <h4>Fonctionnement</h4>
-                <div>
+                <h1>Fonctionnement</h1>
+                <div class="choice">
                     <i class=""></i>
                     <button type="submit" class=""><i class=""></i>Choisissez un restaurant</button>
                 </div>
-                <div>
+                <div class="make">
                     <i class=""></i>
-                    <button type="submit" class=""><i class=""></i>Choisissez un restaurant</button>
+                    <button type="submit" class="bnt"><i class=""></i>Composez votre menu</button>
                 </div>
-                <div>
+                <div class="taste">
                     <i class=""></i>
-                    <button type="submit" class=""><i class=""></i>Choisissez un restaurant</button>
+                    <button type="submit" class=""><i class=""></i>Dégustez au restaurant</button>
                 </div>
             </section>    
             <section class="restaurants">
+                <title>Restaurants</title>
                 <div class="restaurant-cards">
+                    <a href="">
+                        <article class="card">
+                            <img src="" alt="">
+                            <p>Nouveau</p>
+                            <div>
+                               <h5>nom restaurant</h5> 
+                               <p>lieu</p>
+                               <i class=""></i>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="">
+                        <article class="card">
+                            <img src="" alt="">
+                            <p>Nouveau</p>
+                            <div>
+                               <h5>nom restaurant</h5> 
+                               <p>lieu</p>
+                               <i class=""></i>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="">
+                        <article class="card">
+                            <img src="" alt="">
+                            <p>Nouveau</p>
+                            <div>
+                               <h5>nom restaurant</h5> 
+                               <p>lieu</p>
+                               <i class=""></i>
+                            </div>
+                        </article>
+                    </a>
                     <a href="">
                         <article class="card">
                             <img src="" alt="">
