--- a/index.html
+++ b/index.html
@@ -17,80 +17,80 @@
         <div class="main-container">
             <header class="header">
                 <div>
-                    <i class=""></i>
+                    <i class="fa-solid fa-arrow-left"></i>
                     <img src="assets/images/logo/ohmyfood.png" alt="Logo HoMyFood">
                 </div>                
                 <div class="location">
-                    <i class=""></i>
+                    <i class="fa-solid fa-location-dot"></i>
                     <h1>Paris, Belleville</h1>
                 </div>
             </header>
         </div>
         <main>
             <section class="hero">
-                <title>Réserver le menu qui vous convient</title>
+                <h1>Réserver le menu qui vous convient</h1>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
                 <button type="submit" class="btn">Exporez nos restaurants</button>
             </section>
             <section class="fonctionnement">
                 <h1>Fonctionnement</h1>
                 <div class="choice">
-                    <i class=""></i>
-                    <button type="submit" class=""><i class=""></i>Choisissez un restaurant</button>
+                    <div class="circle">1</div>
+                    <button type="submit" class="btn"><i class="fa-solid fa-mobile-screen-button"></i></i>Choisissez un restaurant</button>
                 </div>
                 <div class="make">
-                    <i class=""></i>
-                    <button type="submit" class="bnt"><i class=""></i>Composez votre menu</button>
+                    <div class="circle">2</div>
+                    <button type="submit" class="bnt"><i class="fa-solid fa-list-ul"></i>Composez votre menu</button>
                 </div>
                 <div class="taste">
-                    <i class=""></i>
-                    <button type="submit" class=""><i class=""></i>Dégustez au restaurant</button>
+                    <div class="circle">3</div>
+                    <button type="submit" class="btn"><i class="fa-solid fa-store"></i>Dégustez au restaurant</button>
                 </div>
             </section>    
             <section class="restaurants">
-                <title>Restaurants</title>
+                <h1>Restaurants</h1>
                 <div class="restaurant-cards">
                     <a href="">
                         <article class="card">
-                            <img src="" alt="">
+                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                             <p>Nouveau</p>
                             <div>
-                               <h5>nom restaurant</h5> 
-                               <p>lieu</p>
-                               <i class=""></i>
+                               <h5>La palette du goût</h5> 
+                               <p>Ménilmontant</p>
+                               <i class="fa-light fa-heart"></i>
                             </div>
                         </article>
                     </a>
                     <a href="">
                         <article class="card">
-                            <img src="" alt="">
+                            <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                             <p>Nouveau</p>
                             <div>
-                               <h5>nom restaurant</h5> 
-                               <p>lieu</p>
-                               <i class=""></i>
+                               <h5>La note enchantée</h5> 
+                               <p>Charonne</p>
+                               <i class="fa-light fa-heart"></i>
                             </div>
                         </article>
                     </a>
                     <a href="">
                         <article class="card">
-                            <img src="" alt="">
+                            <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                             <p>Nouveau</p>
                             <div>
-                               <h5>nom restaurant</h5> 
-                               <p>lieu</p>
-                               <i class=""></i>
+                               <h5>A la française</h5> 
+                               <p>Cité Rouge</p>
+                               <i class="fa-light fa-heart"></i>
                             </div>
                         </article>
                     </a>
                     <a href="">
                         <article class="card">
-                            <img src="" alt="">
+                            <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                             <p>Nouveau</p>
                             <div>
-                               <h5>nom restaurant</h5> 
-                               <p>lieu</p>
-                               <i class=""></i>
+                               <h5>Le délice des sens</h5> 
+                               <p>Folie-Méricourt</p>
+                               <i class="fa-light fa-heart"></i>
                             </div>
                         </article>
                     </a>
@@ -98,11 +98,11 @@
             </section>
         </main>
         <footer>
-            <div>
-                <img src="" alt="">
+            <div class="footer-container">
+                <img src="assets/images/logo/ohmyfood.png" alt="">
                 <div>
-                    <p><i></i>Proposer un restaurant</p>
-                    <p><i></i>Devenir partenaire</p>
+                    <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
+                    <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
                     <p>Mentions légales</p>
                     <p>Contact</p>
                 </div>
