mise en place du css du header

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
         <link rel="stylesheet" href="SASS/app.css">
     </head>
     <body>
-        <div class="main-container">
-            <header class="header">
-                <div>
-                    <i class="fa-solid fa-arrow-left"></i>
+        <header class="header-container">
+            <div class="header">
+                <i class="fa-solid fa-arrow-left"></i>
+                <div class="logo">
                     <img src="assets/images/logo/ohmyfood.png" alt="Logo HoMyFood">
-                </div>                
-                <div class="location">
-                    <i class="fa-solid fa-location-dot"></i>
-                    <h1>Paris, Belleville</h1>
                 </div>
-            </header>
-        </div>
+            </div>                
+            <div class="location">
+                <i class="fa-solid fa-location-dot"></i>
+                <h1>Paris, Belleville</h1>
+            </div>
+        </header>
         <main>
             <section class="hero">
                 <h1>Réserver le menu qui vous convient</h1>
