mise en style section hero

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <section class="hero">
                 <h1>Réserver le menu qui vous convient</h1>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-                <button type="submit" class="btn">Exporez nos restaurants</button>
+                <button type="submit" class="btn-round">Exporer nos restaurants</button>
             </section>
             <section class="fonctionnement">
                 <h1>Fonctionnement</h1>
