début style fonctionnement

--- a/index.html
+++ b/index.html
@@ -34,17 +34,28 @@
             </section>
             <section class="fonctionnement">
                 <h1>Fonctionnement</h1>
-                <div class="choice">
-                    <div class="circle">1</div>
-                    <button type="submit" class="btn"><i class="fa-solid fa-mobile-screen-button"></i></i>Choisissez un restaurant</button>
-                </div>
-                <div class="make">
-                    <div class="circle">2</div>
-                    <button type="submit" class="bnt"><i class="fa-solid fa-list-ul"></i>Composez votre menu</button>
-                </div>
-                <div class="taste">
-                    <div class="circle">3</div>
-                    <button type="submit" class="btn"><i class="fa-solid fa-store"></i>Dégustez au restaurant</button>
+                <div class="steps">
+                    <div class="step">
+                        <div class="step-number">1</div>
+                        <div class="step-content">
+                            <i class="fa-solid fa-mobile-screen-button"></i>
+                            <span class="step-text">Choisissez un restaurant</span>
+                        </div>
+                    </div>
+                    <div class="step">
+                        <div class="step-number">2</div>
+                        <div class="step-content">
+                            <i class="fa-solid fa-mobile-screen-button"></i>
+                            <span class="step-text">Composez votre menu</span>
+                        </div>
+                    </div>
+                    <div class="step">
+                        <div class="step-number">3</div>
+                        <div class="step-content">
+                            <i class="fa-solid fa-mobile-screen-button"></i>
+                            <span class="step-text">Dégustez au restaurant</span>
+                        </div>
+                    </div>
                 </div>
             </section>    
             <section class="restaurants">
