mise en style section restaurant

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             </section>
             <section class="fonctionnement">
                 <h1>Fonctionnement</h1>
-                <div class="steps">
-                    <div class="step">
-                        <div class="step-number">1</div>
+                <div class="steps">            
+                    <div class="step"> 
+                        <div class="step-number">1</div>                       
                         <div class="step-content">
                             <i class="fa-solid fa-mobile-screen-button"></i>
                             <span class="step-text">Choisissez un restaurant</span>
@@ -45,30 +45,35 @@
                     <div class="step">
                         <div class="step-number">2</div>
                         <div class="step-content">
-                            <i class="fa-solid fa-mobile-screen-button"></i>
+                            <i class="fa-solid fa-list-ul"></i>
                             <span class="step-text">Composez votre menu</span>
                         </div>
                     </div>
                     <div class="step">
                         <div class="step-number">3</div>
                         <div class="step-content">
-                            <i class="fa-solid fa-mobile-screen-button"></i>
+                            <i class="fa-solid fa-store"></i>
                             <span class="step-text">Dégustez au restaurant</span>
                         </div>
                     </div>
                 </div>
             </section>    
             <section class="restaurants">
-                <h1>Restaurants</h1>
-                <div class="restaurant-cards">
+                <h1 class="restaurants-title">Restaurants</h1>
+                <div class="restaurants-cards">
                     <a href="">
                         <article class="card">
-                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-                            <p>Nouveau</p>
-                            <div>
-                               <h5>La palette du goût</h5> 
-                               <p>Ménilmontant</p>
-                               <i class="fa-light fa-heart"></i>
+                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du restaurant">
+                            <div class="badge">Nouveau</div> 
+                            <div class="card-content">                      
+                                <div class="card-txt">
+                                    <div class="card-header">
+                                        <h3 class="card-title">La palette du goût</h3>
+                                        <i class="fa-solid fa-heart"></i>                                        
+                                    </div>
+                                    <p class="card-subtitle">Ménilmontant</p>
+                                </div>
+                                
                             </div>
                         </article>
                     </a>
