--- a/index.html
+++ b/index.html
@@ -69,44 +69,55 @@
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">La palette du goût</h3>
+                                        <i class="fa-regular fa-heart"></i>                                        
+                                    </div>
+                                    <p class="card-subtitle">Ménilmontant</p>
+                                </div>                                
+                            </div>
+                        </article>
+                    </a>
+                     <a href="">
+                        <article class="card">
+                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du restaurant">
+                            <div class="badge">Nouveau</div> 
+                            <div class="card-content">                      
+                                <div class="card-txt">
+                                    <div class="card-header">
+                                        <h3 class="card-title">La palette du goût</h3>
                                         <i class="fa-solid fa-heart"></i>                                        
                                     </div>
                                     <p class="card-subtitle">Ménilmontant</p>
-                                </div>
-                                
+                                </div>                                
                             </div>
                         </article>
                     </a>
-                    <a href="">
+                     <a href="">
                         <article class="card">
-                            <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
-                            <p>Nouveau</p>
-                            <div>
-                               <h5>La note enchantée</h5> 
-                               <p>Charonne</p>
-                               <i class="fa-light fa-heart"></i>
+                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du restaurant">
+                            <div class="badge">Nouveau</div> 
+                            <div class="card-content">                      
+                                <div class="card-txt">
+                                    <div class="card-header">
+                                        <h3 class="card-title">La palette du goût</h3>
+                                        <i class="fa-solid fa-heart"></i>                                        
+                                    </div>
+                                    <p class="card-subtitle">Ménilmontant</p>
+                                </div>                                
                             </div>
                         </article>
                     </a>
-                    <a href="">
+                     <a href="">
                         <article class="card">
-                            <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
-                            <p>Nouveau</p>
-                            <div>
-                               <h5>A la française</h5> 
-                               <p>Cité Rouge</p>
-                               <i class="fa-light fa-heart"></i>
-                            </div>
-                        </article>
-                    </a>
-                    <a href="">
-                        <article class="card">
-                            <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
-                            <p>Nouveau</p>
-                            <div>
-                               <h5>Le délice des sens</h5> 
-                               <p>Folie-Méricourt</p>
-                               <i class="fa-light fa-heart"></i>
+                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du restaurant">
+                            <div class="badge">Nouveau</div> 
+                            <div class="card-content">                      
+                                <div class="card-txt">
+                                    <div class="card-header">
+                                        <h3 class="card-title">La palette du goût</h3>
+                                        <i class="fa-solid fa-heart"></i>                                        
+                                    </div>
+                                    <p class="card-subtitle">Ménilmontant</p>
+                                </div>                                
                             </div>
                         </article>
                     </a>
@@ -115,8 +126,8 @@
         </main>
         <footer>
             <div class="footer-container">
-                <img src="assets/images/logo/ohmyfood.png" alt="">
-                <div>
+                <img src="assets/images/logo/ohmyfood.png" alt="Logo HoMyFood">
+                <div class="footer-txt">
                     <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
                     <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
                     <p>Mentions légales</p>
