--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
             integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-            crossorigin="anonymous" referrerpolicy="no-referrer" />
+            crossorigin="anonymous" referrerpolicy="no-referrer">
         <link rel="stylesheet" href="assets/styles.css">
         <link rel="stylesheet" href="SASS/app.css">
     </head>
@@ -28,12 +28,12 @@
         </header>
         <main>
             <section class="hero">
-                <h1>Réserver le menu qui vous convient</h1>
+                <h2 class="hero-title">Réserver le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
                 <button type="submit" class="btn-round">Exporer nos restaurants</button>
             </section>
             <section class="fonctionnement">
-                <h1>Fonctionnement</h1>
+                <h2>Fonctionnement</h2>
                 <div class="steps">            
                     <div class="step"> 
                         <div class="step-number">1</div>                       
@@ -59,12 +59,14 @@
                 </div>
             </section>    
             <section class="restaurants">
-                <h1 class="restaurants-title">Restaurants</h1>
+                <h2 class="restaurants-title">Restaurants</h2>
                 <div class="restaurants-cards">
                     <a href="">
                         <article class="card">
-                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du restaurant">
-                            <div class="badge">Nouveau</div> 
+                            <div class="image-container">
+                                <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du restaurant">
+                                <div class="badge">Nouveau</div>
+                            </div>                             
                             <div class="card-content">                      
                                 <div class="card-txt">
                                     <div class="card-header">
@@ -78,45 +80,45 @@
                     </a>
                      <a href="">
                         <article class="card">
-                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du restaurant">
-                            <div class="badge">Nouveau</div> 
+                            <div class="image-container">
+                                <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image du restaurant">
+                                <div class="badge">Nouveau</div>
+                            </div>  
                             <div class="card-content">                      
                                 <div class="card-txt">
                                     <div class="card-header">
-                                        <h3 class="card-title">La palette du goût</h3>
-                                        <i class="fa-solid fa-heart"></i>                                        
+                                        <h3 class="card-title">La note enchantée</h3>
+                                        <i class="fa-regular fa-heart"></i>                                        
                                     </div>
-                                    <p class="card-subtitle">Ménilmontant</p>
+                                    <p class="card-subtitle">Charonne</p>
                                 </div>                                
                             </div>
                         </article>
                     </a>
                      <a href="">
                         <article class="card">
-                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du restaurant">
-                            <div class="badge">Nouveau</div> 
+                            <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image du restaurant">
                             <div class="card-content">                      
                                 <div class="card-txt">
                                     <div class="card-header">
-                                        <h3 class="card-title">La palette du goût</h3>
+                                        <h3 class="card-title">A la française</h3>
                                         <i class="fa-solid fa-heart"></i>                                        
                                     </div>
-                                    <p class="card-subtitle">Ménilmontant</p>
+                                    <p class="card-subtitle">Cité Rouge</p>
                                 </div>                                
                             </div>
                         </article>
                     </a>
                      <a href="">
                         <article class="card">
-                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du restaurant">
-                            <div class="badge">Nouveau</div> 
+                            <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image du restaurant"> 
                             <div class="card-content">                      
                                 <div class="card-txt">
                                     <div class="card-header">
-                                        <h3 class="card-title">La palette du goût</h3>
-                                        <i class="fa-solid fa-heart"></i>                                        
+                                        <h3 class="card-title">Le délice des sens</h3>
+                                        <i class="fa-regular fa-heart"></i>                                        
                                     </div>
-                                    <p class="card-subtitle">Ménilmontant</p>
+                                    <p class="card-subtitle">Folie-Méricourt</p>
                                 </div>                                
                             </div>
                         </article>
