mofification du footer et des cards de le partie restaurant

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         </header>
         <main>
             <section class="hero">
-                <h2 class="hero-title">Réserver le menu qui vous convient</h2>
+                <h2 class="section-title">Réserver le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
                 <button type="submit" class="btn-round">Exporer nos restaurants</button>
             </section>
             <section class="fonctionnement">
-                <h2>Fonctionnement</h2>
+                <h2 class="section-title">Fonctionnement</h2>
                 <div class="steps">            
                     <div class="step"> 
                         <div class="step-number">1</div>                       
@@ -59,7 +59,7 @@
                 </div>
             </section>    
             <section class="restaurants">
-                <h2 class="restaurants-title">Restaurants</h2>
+                <h2 class="section-title">Restaurants</h2>
                 <div class="restaurants-cards">
                     <a href="">
                         <article class="card">
@@ -90,7 +90,7 @@
                                         <h3 class="card-title">La note enchantée</h3>
                                         <i class="fa-regular fa-heart"></i>                                        
                                     </div>
-                                    <p class="card-subtitle">Charonne</p>
+                                    <p>Charonne</p>
                                 </div>                                
                             </div>
                         </article>
@@ -104,7 +104,7 @@
                                         <h3 class="card-title">A la française</h3>
                                         <i class="fa-solid fa-heart"></i>                                        
                                     </div>
-                                    <p class="card-subtitle">Cité Rouge</p>
+                                    <p>Cité Rouge</p>
                                 </div>                                
                             </div>
                         </article>
@@ -118,7 +118,7 @@
                                         <h3 class="card-title">Le délice des sens</h3>
                                         <i class="fa-regular fa-heart"></i>                                        
                                     </div>
-                                    <p class="card-subtitle">Folie-Méricourt</p>
+                                    <p>Folie-Méricourt</p>
                                 </div>                                
                             </div>
                         </article>
@@ -128,8 +128,8 @@
         </main>
         <footer>
             <div class="footer-container">
-                <img src="assets/images/logo/ohmyfood.png" alt="Logo HoMyFood">
-                <div class="footer-txt">
+                <img src="assets/images/logo/ohmyfood.png" class="footer__logo" alt="Logo HoMyFood">
+                <div class="footer-links">
                     <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
                     <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
                     <p>Mentions légales</p>
