modification des cars et couleur coeur

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">A la française</h3>
-                                        <i class="fa-solid fa-heart"></i>                                        
+                                        <i class="fa-solid fa-heart purple"></i>                                        
                                     </div>
                                     <p>Cité Rouge</p>
                                 </div>                                
