--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
             integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
-        <link rel="stylesheet" href="assets/styles.css">
-        <link rel="stylesheet" href="SASS/app.css">
+            <link rel="stylesheet" href="assets/app.css">
+            <link rel="stylesheet" href="SASS/app.scss">
     </head>
     <body>
         <header class="header-container">
@@ -126,8 +126,8 @@
                 </div>
             </section>
         </main>
-        <footer>
-            <div class="footer-container">
+        <footer class="footer-container">
+            <div class="footer">
                 <img src="assets/images/logo/ohmyfood.png" class="footer__logo" alt="Logo HoMyFood">
                 <div class="footer-links">
                     <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
