modif scss version mobile

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">La note enchantée</h3>
-                                        <i class="fa-regular fa-heart"></i>                                        
+                                        <i class="fa-solid fa-heart purple"></i>                                        
                                     </div>
                                     <p>Charonne</p>
                                 </div>                                
