--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <section class="restaurants">
                 <h2 class="section-title">Restaurants</h2>
                 <div class="restaurants-cards">
-                    <a href="">
+                    <a href="restaurants/la_palette_du_gout.html">
                         <article class="card">
                             <div class="image-container">
                                 <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du restaurant">
@@ -70,14 +70,14 @@
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">La palette du goût</h3>
-                                        <button type="submit" class="btn-like"><i class="fa-regular fa-heart"></i>Like</button>                                        
+                                        <button type="submit" class="btn-like" aria-label="Like"><i class="fa-regular fa-heart"></i></button>                                        
                                     </div>
                                     <p class="card-subtitle">Ménilmontant</p>
                                 </div>                                
                             </div>
                         </article>
                     </a>
-                     <a href="">
+                     <a href="restaurants/la_note_enchantee.html">
                         <article class="card">
                             <div class="image-container">
                                 <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image du restaurant">
@@ -87,14 +87,14 @@
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">La note enchantée</h3>
-                                        <button type="submit" class="btn-like"><i class="fa-regular fa-heart"></i>Like</button>                                   
+                                        <button type="submit" class="btn-like" aria-label="Like"><i class="fa-regular fa-heart"></i></button>                                 
                                     </div>
                                     <p>Charonne</p>
                                 </div>                                
                             </div>
                         </article>
                     </a>
-                    <a href="">
+                    <a href="restaurants/a_la_française.html">
                         <article class="card">
                             <div class="image-container">
                                 <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image du restaurant">
@@ -103,14 +103,14 @@
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">A la française</h3>
-                                        <button type="submit" class="btn-like"><i class="fa-solid fa-heart purple"></i>Like</button>                              
+                                        <button type="submit" class="btn-like" aria-label="Like"><i class="fa-regular fa-heart"></i></button>                             
                                     </div>
                                     <p>Cité Rouge</p>
                                 </div>                                
                             </div>
                         </article>
                     </a>
-                    <a href="">
+                    <a href="restaurants/le_delice.html">
                         <article class="card">
                             <div class="image-container">
                                 <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image du restaurant"> 
@@ -119,7 +119,7 @@
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">Le délice des sens</h3>
-                                        <button type="submit" class="btn-like"><i class="fa-regular fa-heart"></i>Like</button>                                  
+                                        <button type="submit" class="btn-like" aria-label="Like"><i class="fa-regular fa-heart"></i></button>                                 
                                     </div>
                                     <p>Folie-Méricourt</p>
                                 </div>                                
