--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -3,26 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>OhMyFood</title>
+        <title>la_palette_du_goût</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
             integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
-            <link rel="stylesheet" href="SASS/app.css">
+            <link rel="stylesheet" href="../SASS/restaurant.css">
     </head>
     <body>
         <header class="header-container">
             <div class="header">
-                <i class="fa-solid fa-arrow-left" aria-hidden="true"></i>
+                <a href="../index.html" class="arrow" aria-label="accueil"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i></a>
                 <div class="logo">
-                    <img src="assets/images/logo/ohmyfood.png" alt="Logo HoMyFood, page d'accueil">
+                    <img src="../assets/images/logo/ohmyfood.png" alt="Logo HoMyFood, page d'accueil">
                 </div>
-            </div> 
+            </div>  
         </header>
-        <main>
-            <img src="" alt="">
+        <main class="main-container">
+            <div class="image-container">
+                <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+            </div>
             <section class="menu">
                 <div>
                     <h1>La palette du goût</h1>
@@ -32,29 +34,29 @@
                     <h2 class="section-title">ENTREES</h2>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title"></h3>
-                            <p class="card-subtitle"></p>
+                            <h3 class="card-title">Fricassée d'escargots</h3>
+                            <p class="card-subtitle">Au piment d'Espelette</p>
                         </div>
                         <div class="card-price">
-                            <p class="card-price">52<span class="euro">€</span></p>
+                            <p class="card-price">25<span class="euro">€</span></p>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title"></h3>
-                            <p class="card-subtitle"></p>
+                            <h3 class="card-title">Foie gras de canard mi-cuit</h3>
+                            <p class="card-subtitle">Et ses copeaux de truffe noir</p>
                         </div>
                         <div class="card-price">
-                            <p class="card-price">52<span class="euro">€</span></p>
+                            <p class="card-price">35<span class="euro">€</span></p>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title"></h3>
-                            <p class="card-subtitle"></p>
+                            <h3 class="card-title">Oeuf au plat</h3>
+                            <p class="card-subtitle">Assaisonné à la truffe sur lit de caviar</p>
                         </div>
                         <div class="card-price">
-                            <p class="card-price">52<span class="euro">€</span></p>
+                            <p class="card-price">20<span class="euro">€</span></p>
                         </div>
                     </div>
                 </section>
@@ -62,29 +64,29 @@
                     <h2 class="section-title">PLATS</h2>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title"></h3>
-                            <p class="card-subtitle"></p>
+                            <h3 class="card-title">Filet de boeuf aux herbes</h3>
+                            <p class="card-subtitle">Accompagné de sa ribambelle de légumes</p>
                         </div>
                         <div class="card-price">
-                            <p class="card-price">52<span class="euro">€</span></p>
+                            <p class="card-price">40<span class="euro">€</span></p>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title"></h3>
-                            <p class="card-subtitle"></p>
+                            <h3 class="card-title">Parmentier de queue de boeuf</h3>
+                            <p class="card-subtitle">A la truffe noire dur sa purée de panais</p>
                         </div>
                         <div class="card-price">
-                            <p class="card-price">52<span class="euro">€</span></p>
+                            <p class="card-price">35<span class="euro">€</span></p>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title"></h3>
-                            <p class="card-subtitle"></p>
+                            <h3 class="card-title">Filet de turbot</h3>
+                            <p class="card-subtitle">Aux agrumes</p>
                         </div>
                         <div class="card-price">
-                            <p class="card-price">52<span class="euro">€</span></p>
+                            <p class="card-price">44<span class="euro">€</span></p>
                         </div>
                     </div>
                 </section>
@@ -92,38 +94,38 @@
                     <h2 class="section-title">DESSERTS</h2>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title"></h3>
-                            <p class="card-subtitle"></p>
+                            <h3 class="card-title">Paris-Brest</h3>
+                            <p class="card-subtitle">Revisité</p>
                         </div>
                         <div class="card-price">
-                            <p class="card-price">52<span class="euro">€</span></p>
+                            <p class="card-price">18<span class="euro">€</span></p>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title"></h3>
-                            <p class="card-subtitle"></p>
+                            <h3 class="card-title">Macaron au chocolat d'exception</h3>
+                            <p class="card-subtitle">Et glace à la vanille de Madagascar</p>
                         </div>
                         <div class="card-price">
-                            <p class="card-price">52<span class="euro">€</span></p>
+                            <p class="card-price">22<span class="euro">€</span></p>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title"></h3>
-                            <p class="card-subtitle"></p>
+                            <h3 class="card-title">Mousse au chocolat</h3>
+                            <p class="card-subtitle">Au piment d'Espelette et à la truffe noire</p>
                         </div>
                         <div class="card-price">
-                            <p class="card-price">52<span class="euro">€</span></p>
+                            <p class="card-price">23<span class="euro">€</span></p>
                         </div>
                     </div>
                 </section>
-                <button type="submit" class="btn-round">Explorer nos restaurants</button>
+                <button type="submit" class="btn-round">Commander</button>
             </section>
         </main>
         <footer class="footer-container">
             <div class="footer">
-                <img src="assets/images/logo/ohmyfood.png" class="footer__logo" alt="Logo HoMyFood">
+                <img src="../assets/images/logo/ohmyfood.png" class="footer__logo" alt="Logo HoMyFood">
                 <div class="footer-links">
                     <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
                     <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
