--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -7,6 +7,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
             integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -25,12 +27,12 @@
             <div class="image-container">
                 <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
             </div>
-            <section class="menu">
-                <div>
+            <section class="carte">
+                <div class="restaurant-title">
                     <h1>La palette du goût</h1>
                     <button type="submit" class="btn-like" aria-label="Like"><i class="fa-regular fa-heart"></i></button>
                 </div>
-                <section class="entree">
+                <section class="carte-details">
                     <h2 class="section-title">ENTREES</h2>
                     <div class="card">
                         <div class="card-txt">
@@ -60,7 +62,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="plat">
+                <section class="carte-details">
                     <h2 class="section-title">PLATS</h2>
                     <div class="card">
                         <div class="card-txt">
@@ -90,7 +92,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="dessert">
+                <section class="carte-details">
                     <h2 class="section-title">DESSERTS</h2>
                     <div class="card">
                         <div class="card-txt">
