remplissage des autres pages restaurants

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             </div>
                         </article>
                     </a>
-                    <a href="restaurants/le_delice.html">
+                    <a href="restaurants/le_delice_des_sens.html">
                         <article class="card">
                             <div class="image-container">
                                 <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image du restaurant"> 
