remplissage des autres pages restaurants

--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -25,19 +25,19 @@
         </header>
         <main class="main-container">
             <div class="image-container">
-                <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                <img src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
             </div>
             <section class="carte">
                 <div class="restaurant-title">
-                    <h1>La palette du goût</h1>
+                    <h1>Le délice des sens</h1>
                     <button type="submit" class="btn-like" aria-label="Like"><i class="fa-regular fa-heart"></i></button>
                 </div>
                 <section class="carte-details">
                     <h2 class="section-title">ENTREES</h2>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title">Tartare de poulpe acidulé</h3>
-                            <p class="card-subtitle">Aux zestes d'orange</p>
+                            <h3 class="card-title">Tartare de thon</h3>
+                            <p class="card-subtitle">Assaisonné au yuzu</p>
                         </div>
                         <div class="card-price">
                             <p class="card-price">25<span class="euro">€</span></p>
@@ -45,8 +45,8 @@
                     </div>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title">Velouté de légumes d'antan</h3>
-                            <p class="card-subtitle">Carotte, panais, topinambour</p>
+                            <h3 class="card-title">Bouchée de homard croustillant</h3>
+                            <p class="card-subtitle">Et sa farandole de petits légumes</p>
                         </div>
                         <div class="card-price">
                             <p class="card-price">35<span class="euro">€</span></p>
@@ -54,8 +54,8 @@
                     </div>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title">Soupe à l'oignon</h3>
-                            <p class="card-subtitle">Revisitée</p>
+                            <h3 class="card-title">Velouté de cèpes</h3>
+                            <p class="card-subtitle">Aux truffes</p>
                         </div>
                         <div class="card-price">
                             <p class="card-price">20<span class="euro">€</span></p>
@@ -66,8 +66,8 @@
                     <h2 class="section-title">PLATS</h2>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title">Coquilles Saint-jacques</h3>
-                            <p class="card-subtitle">Accompagnées d'une purée de panais</p>
+                            <h3 class="card-title">Poulet rôti aux herbes de Provence</h3>
+                            <p class="card-subtitle">Et sa crème de truffe</p>
                         </div>
                         <div class="card-price">
                             <p class="card-price">40<span class="euro">€</span></p>
@@ -75,8 +75,8 @@
                     </div>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title">Magret de canard</h3>
-                            <p class="card-subtitle">Et parmentier de pomme de terre</p>
+                            <h3 class="card-title">Langouste rôtie</h3>
+                            <p class="card-subtitle">Et ses légumes de saison</p>
                         </div>
                         <div class="card-price">
                             <p class="card-price">35<span class="euro">€</span></p>
@@ -84,8 +84,8 @@
                     </div>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title">Pigeonneau d'Ile-et-Vialine</h3>
-                            <p class="card-subtitle">Sur son lit de gnocchis aux légumes</p>
+                            <h3 class="card-title">Côte de boeuf Angus</h3>
+                            <p class="card-subtitle">Et sa purée de panais</p>
                         </div>
                         <div class="card-price">
                             <p class="card-price">44<span class="euro">€</span></p>
@@ -96,8 +96,8 @@
                     <h2 class="section-title">DESSERTS</h2>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title">Pétales de violettes glacés</h3>
-                            <p class="card-subtitle">Et purée de noisettes</p>
+                            <h3 class="card-title">Farandole de desserts</h3>
+                            <p class="card-subtitle">Du chef</p>
                         </div>
                         <div class="card-price">
                             <p class="card-price">18<span class="euro">€</span></p>
@@ -105,8 +105,8 @@
                     </div>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title">Fondant au chocolat</h3>
-                            <p class="card-subtitle">Revisité</p>
+                            <h3 class="card-title">Crème brulée</h3>
+                            <p class="card-subtitle">Revisitée</p>
                         </div>
                         <div class="card-price">
                             <p class="card-price">22<span class="euro">€</span></p>
@@ -114,8 +114,8 @@
                     </div>
                     <div class="card">
                         <div class="card-txt">
-                            <h3 class="card-title">Millefeuille croustillant</h3>
-                            <p class="card-subtitle">Myrtilles et pâte d'amande</p>
+                            <h3 class="card-title">Tiramisu</h3>
+                            <p class="card-subtitle">A la noisette</p>
                         </div>
                         <div class="card-price">
                             <p class="card-price">23<span class="euro">€</span></p>
