--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -132,7 +132,7 @@
                     <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
                     <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
                     <p>Mentions légales</p>
-                    <p>Contact</p>
+                    <p><a href="mailto:exemple@email.com">Contact</a></p>
                 </div>
             </div>
         </footer>
