--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">La palette du goût</h3>
-                                        <input type="checkbox" id="like" class="btn__check">
-                                            <label for="like" class="btn">
+                                        <input type="checkbox" id="like1" class="btn__check" title="like1">
+                                            <label for="like1" class="btn">
                                                 <i class="fa-regular fa-heart"></i>
                                                 <i class="fa-solid fa-heart btn__bg"></i>
                                             </label>                                      
@@ -89,8 +89,8 @@
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">La note enchantée</h3>
-                                        <input type="checkbox" id="like" class="btn__check">
-                                            <label for="like" class="btn">
+                                        <input type="checkbox" id="like2" class="btn__check" title="like2">
+                                            <label for="like2" class="btn">
                                                 <i class="fa-regular fa-heart"></i>
                                                 <i class="fa-solid fa-heart btn__bg"></i>
                                             </label>                                    
@@ -109,8 +109,8 @@
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">A la française</h3>
-                                        <input type="checkbox" id="like" class="btn__check">
-                                            <label for="like" class="btn">
+                                        <input type="checkbox" id="like3" class="btn__check" title="like3">
+                                            <label for="like3" class="btn">
                                                 <i class="fa-regular fa-heart"></i>
                                                 <i class="fa-solid fa-heart btn__bg"></i>
                                             </label>                                
@@ -129,8 +129,8 @@
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">Le délice des sens</h3>
-                                        <input type="checkbox" id="like" class="btn__check">
-                                            <label for="like" class="btn">
+                                        <input type="checkbox" id="like4" class="btn__check" title="like4">
+                                            <label for="like4" class="btn">
                                                 <i class="fa-regular fa-heart"></i>
                                                 <i class="fa-solid fa-heart btn__bg"></i>
                                             </label>                                    
