modification cards et coeur pages restaurants

--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -29,7 +29,11 @@
             <section class="carte">
                 <div class="restaurant-title">
                     <h1>La palette du goût</h1>
-                    <button type="submit" class="btn-like" aria-label="Like"><i class="fa-regular fa-heart"></i></button>
+                    <input type="checkbox" id="like1" class="btn__check" title="like1">
+                                            <label for="like1" class="btn">
+                                                <i class="fa-regular fa-heart"></i>
+                                                <i class="fa-solid fa-heart btn__bg"></i>
+                                            </label>
                 </div>
                 <section class="carte-details">
                     <h2 class="section-title">ENTREES</h2>
@@ -40,6 +44,9 @@
                         </div>
                         <div class="card-price">
                             <p class="card-price">25<span class="euro">€</span></p>
+                        </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
                         </div>
                     </div>
                     <div class="card">
