--- a/restaurants/a_la_française.html
+++ b/restaurants/a_la_française.html
@@ -29,7 +29,11 @@
             <section class="carte">
                 <div class="restaurant-title">
                     <h1>La palette du goût</h1>
-                    <button type="submit" class="btn-like" aria-label="Like"><i class="fa-regular fa-heart"></i></button>
+                    <input type="checkbox" id="like1" class="btn__check" title="like1">
+                                            <label for="like1" class="btn">
+                                                <i class="fa-regular fa-heart"></i>
+                                                <i class="fa-solid fa-heart btn__bg"></i>
+                                            </label>
                 </div>
                 <section class="carte-details">
                     <h2 class="section-title">ENTREES</h2>
