--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
             crossorigin="anonymous" referrerpolicy="no-referrer">
         <link rel="stylesheet" href="SASS/app.css">
     </head>
-    <body>
+    <body>        
+        <!-- Loader OhMyFood -->
+        <div class="loader">
+            <div class="load">
+                <div class="load__bar load__bar--1"></div>
+                <div class="load__bar load__bar--2"></div>
+                <div class="load__bar load__bar--3"></div>
+                <div class="load__bar load__bar--4"></div>
+                <div class="load__bar load__bar--5"></div>
+            </div>
+            <div class="load">
+                <div class="load__bar load__bar--1-inv"></div>
+                <div class="load__bar load__bar--2-inv"></div>
+                <div class="load__bar load__bar--3-inv"></div>
+                <div class="load__bar load__bar--4-inv"></div>
+                <div class="load__bar load__bar--5-inv"></div>
+            </div>
+            <h1 class="loader__title">Ohmyfood</h1>
+        </div>
         <header class="header-container">
             <div class="header">
                 <div class="logo">
